@@ -19,6 +19,8 @@ package com.sun.enterprise.admin.util;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Base64;
@@ -213,7 +215,11 @@ public final class HttpConnectorAddress {
     }
 
     public URL toURL(String path) throws MalformedURLException {
-        return new URL(getConnectorType(), getHost(), getPort(), path == null ? "" : path);
+        try {
+            return new URI(getConnectorType(), null, getHost(), getPort(), path == null ? "" : path, null, null).toURL();
+        } catch (URISyntaxException e) {
+            throw new MalformedURLException(e.getMessage());
+        }
     }
 
     public synchronized SSLSocketFactory getSSLSocketFactory() {
